Courses/JavaScript-Basics/jaeden_fuller_jsb_final_project/assets/style/sign-up.css
@import 'base.css';
@import 'index.css';

#signupForm {
    background-color: #fff;
    width: 450px;
    margin: 60px auto 0;
    border-radius: 12px;
    height: 550px;
    padding: 20px;
    box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.137);
    transition: none;
}

#signupForm h2 {
    color: #1A1A40;
    margin: 0;
}

.flex1 {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#signupForm input[type='text'] {
    width: 100%;
    height: 42px;
    margin-bottom: 15px;
    border-radius: 8px;
    padding-left: 10px;
    background-color: #f5f5f5;  
    transition: none; 
}

#signupForm input[type='email'] {
    width: 100%;
    height: 42px;
    margin-bottom: 15px;
    border-radius: 8px;
    padding-left: 10px;
    background-color: #f5f5f5;   
    transition: none;
}

#signupForm input[type='button'] {
    background-color: #00C897;
    color: #fff;
    font-weight: 700;
    font-size: 20px;
    cursor: pointer;
    height: 50px;  
    border-radius: 8px;
}

#signupForm input[type='button']:hover {
    background-color: #00dca6;
}

#signupForm input[type='button']:active {
    background-color: #00b488;
}

